# libdxbc

./: CMakeLists.txt
cmake/: build.cmake
include/: libDxBc.h  libdxbc.h
source/: CMakeLists.txt  DirectXMath.h  api.cpp  bc.cpp  bc.h  bc4bc5.cpp  bc6hbc7.cpp  defs.h
